# pullsar

./: .dockerignore  .env.example  .gitignore  Containerfile  README.md  compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  tox.ini  turbo.json
.github/workflows/: ci-cd.yaml  test.yaml
ansible/: ansible.cfg
ansible/files/migrations/: V1__initial_setup.sql
ansible/inventories/: prod.yml  stage.yml
ansible/inventory/: hosts.yml
ansible/inventory/group_vars/: all.yml  pullsar_prod.yml  pullsar_stage.yml
ansible/playbooks/: deploy.yml
ansible/roles/api/tasks/: main.yml
ansible/roles/app/tasks/: main.yml
ansible/roles/app/templates/: api-deployment.yml  api-service.yml  web-route.yml  worker-cronjob.yml
ansible/roles/project_setup/tasks/: main.yml
ansible/roles/project_setup/templates/: postgresql-migration-job.yml  postgresql-persistent.yml
ansible/roles/web/tasks/: main.yml
ansible/roles/worker/tasks/: main.yml
ansible/templates/: api-deployment.yml  api-service.yml  postgresql-migration-job.yml  postgresql-persistent.yml  web-deployment.yml  web-route.yml  web-service.yml  worker-cronjob.yml
ansible/vaults/prod/: secrets.yml
ansible/vaults/stage/: secrets.yml
apps/api/: Containerfile  README.md  package.json  pyproject.toml  tox.ini
apps/api/src/app/: config.py  crud.py  database.py  db_utils.py  main.py  schemas.py
apps/api/src/app/routers/: v1.py
apps/api/tests/: conftest.py  test_main.py
apps/web/: .gitignore  Containerfile  README.md  eslint.config.js  index.html  nginx.conf  package.json  vite.config.ts
apps/web/src/: index.css  main.tsx
apps/web/src/components/: BreadcrumbNav.tsx  (+18 more)
apps/worker/: Containerfile  README.md  package.json  pyproject.toml
apps/worker/src/pullsar/: cached_context.py  cli.py  config.py  main.py  parse_operators_catalog.py  pyxis_client.py  stats_resolver.py  update_operator_usage_stats.py
apps/worker/tests/: test_main.py  test_operator_bundle_model.py  test_pyxis_client.py  test_stats_resolver.py  test_update_operator_usage_stats.py
src/pullsar/: cli.py  config.py  get_quay_repo_logs.py  get_quay_repo_tags.py  main.py  operator_bundle_model.py  parse_operators_catalog.py  pyxis_client.py  quay_client.py  update_operator_usage_stats.py
src/pullsar/db/: connection.py  insert.py  manager.py  schema.py
tests/: conftest.py  test_cli.py  test_config.py  test_main.py  test_operator_bundle_model.py  test_parse_operators_catalog.py  test_pyxis_client.py  test_quay_client.py  test_update_operator_usage_stats.py
tests/db/: test_connection.py  test_insert.py  test_manager.py  test_schema.py
(+34 files in other folders)
