[project]
name = "pullsar"
version = "0.1.0"

description = "A tool for accessing, processing and gathering usage stats for Openshift operators."

authors = [{name = "Jakub Durkac",email = "jakubdurkac@gmail.com"}]

license = {text = "Apache-2.0"}
readme = "README.md"
packages = [{include = "pullsar", from = "src"}]
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"
pytest = "^8.4.1"
mypy = "^1.16.1"
tox = "^4.27.0"
pytest-cov = "^6.2.1"
types-requests = "^2.32.4.20250611"
pytest-mock = "^3.14.1"

[tool.poetry.scripts]
pullsar = "pullsar.main:main"
